# zops

./: Makefile.in  aclocal.m4  configure  configure.ac
conf/: tognix_agentd.conf  tognix_agentd.win.conf  tognix_proxy.conf  tognix_server.conf  zops_agentd.conf  zops_agentd.win.conf  zops_proxy.conf  zops_server.conf
conf/tognix_agentd/: userparameter_examples.conf  userparameter_mysql.conf
conf/zops_agentd/: userparameter_examples.conf  userparameter_mysql.conf
database/: Makefile.in
database/mysql/: Makefile.in  bzyaov1.3.sql
database/oracle/: Makefile.in
database/postgresql/: Makefile.in
database/sqlite3/: Makefile.in
include/: Makefile  Makefile.in  license.h  version.h  zbx_host_constants.h  zbxcacheconfig.h  zbxcommon.h  zbxcomms.h  zbxdbhigh.h  zbxdiscovery.h  zbxip.h  zbxjson.h  zbxmutexs.h  zbxnix.h  zbxrtc.h  zbxserver.h  zbxstr.h  zbxthreads.h
man/: Makefile.in
misc/: Makefile.in
src/: Makefile.in
src/go/: Makefile  Makefile.am  Makefile.in
src/libs/: Makefile.am  Makefile.in
src/libs/zbxlic/: Makefile.am  Makefile.in  aes_crypt.c  licbase64.c  liccrypto.c  liccustomer.c  license.c  lichardware_info.c  lichardware_info.h  licpem.c  licprovider.c  licprovider.h  licrsa.c  licsha2.c  md5.c  ossllib.h
src/zabbix_agent/: Makefile.am  Makefile.in  cpustat.c  zabbix_agentd.c
src/zabbix_get/: Makefile.am  Makefile.in
src/zabbix_java/: Makefile.am  Makefile.in  settings.sh  shutdown.sh  startup.sh
src/zabbix_js/: Makefile.am  Makefile.in
src/zabbix_proxy/: Makefile.am  Makefile.in  proxy.c
src/zabbix_sender/: Makefile.am  Makefile.in  zabbix_sender.c
src/zabbix_server/: Makefile.am  Makefile.in  actions.c  server.c
src/zabbix_server/discoverer/: Makefile.am  Makefile.in  discoverer.c  discoverer.h  discoverer_comm.c  discoverer_comm.h  discoverer_kubernetes.c  discoverer_kubernetes.h  discoverer_manager.c  discoverer_manager.h  discoverer_nutanix.c  discoverer_nutanix.h  discoverer_protocol.c  discoverer_protocol.h  discoverer_single.c  discoverer_single.h  discoverer_vmware.c  discoverer_vmware.h  user_discoverer.c  user_discoverer.h
templates/1.服务器/: 12.VMware HV.yaml  14.Chassis by IPMI.yaml  2.Zops Server Health.yaml  3.Server Linux by Agent.yaml  4.Server Linux by SNMP.yaml  5.Server Windows by Agent.yaml  6.Server Windows by SNMP.yaml
templates/2.虚拟机/: 10.VM Windows by SNMP.yaml  13.VMware VM.yaml  7.VM Linux by Agent.yaml  8.VM Linux by SNMP.yaml  9.VM Windows by Agent.yaml
templates/3.网络设备/: 11.Network Generic Device by SNMP.yaml  15.Device by Ping.yaml
templates/6.超融合/: 16.Nutanix Cluster by SNMP.yaml  17.Nutanix HV by HTTP.yaml  18.Nutanix VM by HTTP.yaml
templates/7.数据库/: 19.MySQL by ODBC.yaml  20.MSSQL by ODBC.yaml  21.Oracle by ODBC.yaml
templates/8.web服务/: 22.Apache by HTTP.yaml  23.Tomcat by JMX.yaml  24.IIS by Agent.yaml
templates/9.中间件/: 25.RabbitMQ Cluster by HTTP.yaml  26.RabbitMQ Node by HTTP.yaml  (+2 more)
(+242 files in other folders)
