## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libzbxlic.a

libzbxlic_a_SOURCES = \
	ossllib.h \
	licbase64.c \
	licpem.c \
	licsha2.c \
	liccrypto.c \
	cJSON.h \
	cJSON.c \
	licrsa.c \
	lichardware_info.h \
	lichardware_info.c \
	license.c \
	liccustomer.c \
	aes_crypt.c \
	md5.h \
	md5.c

libzbxlic_a_CFLAGS = \
		$(TLS_CFLAGS)
